components/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: rewrite-path
  labels:
    traffic-type: internal
spec:
  ingressClassName: kong
  rules:
    - host: api.hl.ancalagon.black
      http:
        paths:
          - path: /govee/(.*)
            pathType: Prefix
            backend:
              service:
                name: govee-web-svc
                port:
                  number: 80
